--- a/src/components/InputStyle.css
+++ b/src/components/InputStyle.css
@@ -14,6 +14,11 @@
     border-radius: 10px;
 }
 
+.form input[type = text]{
+    font-size: 18px;
+    text-align: center;
+}
+
 .form input::placeholder{
     text-align: center;
     font-size: 18px;
